--- a/2-lab_zookeeper_cluster.html
+++ b/2-lab_zookeeper_cluster.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Lab - Zookeeper кластер</title>
+  <title>Lab - Высокодоступный Zookeeper Кластер</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="strapdown/themes/Dark Mode.min.css">
   <link rel="stylesheet" href="strapdown/themes/Light Mode.min.css">
@@ -14,7 +14,7 @@
       
 # Цель
 
-  Цель практики - ознакомиться созданием и эксплуатированием Zookeeper кластера.
+  Цель практики - ознакомиться с созданием и эксплуатированием Zookeeper кластера.
 
 # Предварительные условия
 
@@ -234,7 +234,7 @@
  ```
  delete /mynode
  ```
-Note: Более ранние версии зукипера использовали команду `rm`.
+Примечание: Более ранние версии зукипера использовали команду `rm`.
 
 # Дополнительные задания:
 
