--- a/2-lab_zookeeper_cluster.html
+++ b/2-lab_zookeeper_cluster.html
@@ -115,13 +115,7 @@
  sudo chown -R zookeeper /var/lib/zookeeper
  ```
 
-8. Запустите сервис зукипера:
- ```
- sudo su - zookeeper
- zkServer.sh start
- ```
-
-9. Если ранее были запущены другие зукипер сервера, обновите их конфигурацию, чтобы список серверов соответствовал текущему количеству:
+8. Внимание! Если ранее были запущены другие зукипер сервера, обновите их конфигурацию (т.е. выполните данный пункт на других серверах зукипер-кластера), чтобы список серверов соответствовал текущему количеству:
  ```
  vim /opt/apache-zookeeper-3.7.0-bin/conf/zoo.cfg
     server.1=172.22.22.121:2888:3888
@@ -131,6 +125,11 @@
  Далее перезапустите соответствующие зукипер сервера по одному:
  ```
  zkServer.sh restart
+ ```
+9. Продолжите установку и запустите сервис зукипера на настраиваемом сервере:
+ ```
+ sudo su - zookeeper
+ zkServer.sh start
  ```
 
 10. Проверьте статус зукипера:
@@ -160,7 +159,7 @@
  ```
 
 12. Вы настроили 1 из 3 серверов. Проделайте то же самое (шаги 1-12) с остальными 2 серверами (`server2` и `server3`), чтобы получить ансамбль зукипера.
-После окончания настройки всех 3 серверов, у лидера (т.е. на одном из 3 серверов) Вы увидете:
+После окончания настройки всех 3 серверов, у лидера (т.е. на одном из 3 серверов) Вы увидите:
  ```
  echo "mntr" | nc localhost 2181 | grep zk_synced
  zk_synced_followers     2
