--- a/4-lab_kafkacat.html
+++ b/4-lab_kafkacat.html
@@ -31,10 +31,10 @@
 # Ознакомьтесь с kafkacat
 
 В Kafkacat есть 4 режима работы: 
--C - Consume - Потребление сообщений
--P - Produce - Производство сообщений
--L - Metadata List - Запрос метаданных
--Q - Query - Запросы к данным
+ * -C - Consume - Потребление сообщений
+ * -P - Produce - Производство сообщений
+ * -L - Metadata List - Запрос метаданных
+ * -Q - Query - Запросы к данным
 
 1. Получите список метаданных тем:
  ```
